crates/validation/tests/snapshots/transition_tests__live_last_pub_id_is_larger_then_current_pub_id.snap
---
source: crates/validation/tests/transition_tests.rs
expression: errors
---
[
    Error {
        scope: flow://control/collections/the/collection,
        error: current publication ID 2020202020202020 has been superseded by a larger publication ID 9090909090909090; please retry the operation,
    },
    Error {
        scope: flow://control/collections/the/derivation,
        error: current publication ID 2020202020202020 has been superseded by a larger publication ID 9090909090909090; please retry the operation,
    },
    Error {
        scope: flow://control/tests/the/test,
        error: current publication ID 2020202020202020 has been superseded by a larger publication ID 9090909090909090; please retry the operation,
    },
    Error {
        scope: flow://control/captures/the/capture,
        error: current publication ID 2020202020202020 has been superseded by a larger publication ID 9090909090909090; please retry the operation,
    },
    Error {
        scope: flow://control/materializations/the/materialization,
        error: current publication ID 2020202020202020 has been superseded by a larger publication ID 9090909090909090; please retry the operation,
    },
]
